# jasmine

./: .gitignore  Cargo.toml  README.md  changelog.md
.github/workflows/: release-python-linux.yml  release-python.yml
crates/jasmine/: Cargo.toml
crates/jasmine-ops/: Cargo.toml
crates/jasmine-ops/src/: bin.rs  lib.rs
crates/jasmine-ops/tests/: ops_test.rs
crates/jasmine/src/: ast_node.rs  errors.rs  j.rs  jasmine.pest  parser.rs
crates/jasmine/tests/: parser_test.rs
docs/: data-type.md  ipc.md  join.md  operator.md  partitioned-dataframe.md  quick-started.md  sql.md  termporal.md  timer.md
docs/note/: 2024-12-08.md  2024-12-10.md  2024-12-17.md
note/: 2024-12-17.md
py-jasmine/: Cargo.toml  README.md  pyproject.toml
py-jasmine/jasminum/: constant.py  df.py  engine.py  eval.py  io.py  j.py  j_conn.py  j_fn.py  j_handle.py  main.py  math.py  operator.py  ops.py  serde.py  series.py  temporal.py
py-jasmine/src/: ast.rs  j.rs  lib.rs  ops.rs
py-jasmine/test/: test_op.py  test_serde.py  test_sql.py
tmp/trade/: 20241209_0000  20241210_0000
