[package]
name = "py-jasmine"
version.workspace = true
edition = "2021"

[lib]
name = "jasminum"
crate-type = ["cdylib"]

[dependencies]
jasmine = { path = "../crates/jasmine" }
jasmine-ops = { path = "../crates/jasmine-ops" }
pyo3 = { version = "0.23.5", features = [
  "extension-module",
  "chrono",
  "indexmap",
] }
thiserror = "2.0.12"
pyo3-polars = { version = "0.20.0", features = [
  "dtype-categorical",
  "dtype-array",
  "dtype-full",
  "derive",
] }
chrono = "0.4.40"
chrono-tz = "0.10.1"
indexmap = "2.8.0"
numpy = "0.23.0"
iana-time-zone = "0.1.61"
polars-arrow = "0.46.0"

[dependencies.polars]
workspace = true

[profile.opt-dev]
strip = "symbols"
inherits = "dev"
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true
incremental = true
codegen-units = 16
lto = "thin"

[profile.release]
strip = "symbols"
codegen-units = 1
lto = "fat"
